# prosoft

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md
cmake/: common_flags.cmake  unique_flags.cmake
documentation/: task_1_solution.docx  task_2_solution.docx  task_3_solution.docx  task_5_solution.docx  task_6.txt  тестовое_задание.docx
task_1/: CMakeLists.txt  extra.cpp  main.cpp
task_2/: CMakeLists.txt  main.cpp
task_3/: CMakeLists.txt  legacy.c  modern.cpp
task_4/: CMakeLists.txt  main.cpp
task_5/: CMakeLists.txt  extra_find.cpp  extra_find_avx512.cpp  main.c
task_6/: CMakeLists.txt  list_interface.h  list_realization.c  main.c
